--- a/renovate.json
+++ b/renovate.json
@@ -3,6 +3,12 @@
   "extends": [
     "config:base"
   ],
+  "packageRules": [
+    {
+      "matchPackageNames": ["quay.io/kairos/kairos-ubuntu-22-lts"],
+      "versioning": "regex:^v?(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-k3sv\\d+\\.\\d+\\.\\d+\\+k3s\\d+$"
+    }
+  ],
   "regexManagers": [
     {
       "fileMatch": [
@@ -36,13 +42,12 @@
     },
     {
       "fileMatch": [
-        "^plays/.+?\\.yml$"
+        "^plays/kairos/upgrade\\.yml$"
       ],
-      "datasourceTemplate": "github-releases",
+      "datasourceTemplate": "docker",
       "matchStrings": [
-        "#\\s*renovate:((\\s*versioning=(?<versioning>.+?))|(\\s*depName=(?<depName>(\\w|-|\\/)+))|(\\s*datasource=(?<dataSource>(\\w|-)+)))*\\n.+?kairos_version: \"(?<currentValue>v\\d+\\.\\d+\\.\\d+?).+?"
-      ],
-      "versioningTemplate": "{{#if versioning}}{{versioning}}{{else}}semver{{/if}}"
+        "#\\s*renovate:\\sdepName=(?<depName>.*?)\\n\\s+kairos_version: \"(?<currentValue>.*?)\""
+      ]
     },
     {
       "datasourceTemplate": "helm",
