--- a/plays/k8s/longhorn/tasks.yml
+++ b/plays/k8s/longhorn/tasks.yml
@@ -105,43 +105,60 @@
         namespace: longhorn-system
       spec:
         concurrency: 2
-        cron: "5 */1 * * *"
+        cron: "15 */1 * * *"
         groups:
           - default
         retain: 24 # Full Day
         task: backup
     state: present
-- name: Configure daily backup job
+- name: Configure hourly snapshot job
   kubernetes.core.k8s:
     api_version: longhorn.io/v1beta1
     context: "{{ cluster }}"
     kind: RecurringJob
     resource_definition:
       metadata:
-        name: backup-daily
+        name: snapshot-hourly
         namespace: longhorn-system
       spec:
         concurrency: 2
-        cron: "15 0 */1 * *"
+        cron: "5 */1 * * *"
+        groups:
+          - default
+        retain: 24 # Full Day
+        task: snapshot
+    state: present
+- name: Configure daily snapshot job
+  kubernetes.core.k8s:
+    api_version: longhorn.io/v1beta1
+    context: "{{ cluster }}"
+    kind: RecurringJob
+    resource_definition:
+      metadata:
+        name: snapshot-daily
+        namespace: longhorn-system
+      spec:
+        concurrency: 2
+        cron: "15 9 */1 * *"
         groups:
           - default
         retain: 14 # Two Weeks
-        task: backup
+        task: snapshot
     state: present
-- name: Configure weekly backup job
+- name: Configure weekly snapshot job
   kubernetes.core.k8s:
     api_version: longhorn.io/v1beta1
     context: "{{ cluster }}"
     kind: RecurringJob
     resource_definition:
       metadata:
-        name: backup-weekly
+        name: snapshot-weekly
         namespace: longhorn-system
       spec:
         concurrency: 2
-        cron: "30 1 * * 0"
+        cron: "30 10 * * 0"
         groups:
           - default
         retain: 8 # Two Months
-        task: backup
+        task: snapshot
     state: present
