--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -206,9 +206,9 @@ bind_zones:
         ip: "10.10.0.86"
       - name: test-controlplane01.hogs
         ip: 10.10.0.101
-      - name: test-controlplane02.hogs
+      - name: test-node01.hogs
         ip: 10.10.0.102
-      - name: test-controlplane03.hogs
+      - name: test-node02.hogs
         ip: 10.10.0.103
       - name: test-worker01.hogs
         ip: 10.10.0.104
