--- a/plays/kairos/upgrade.yml
+++ b/plays/kairos/upgrade.yml
@@ -17,7 +17,7 @@
       register: osreleasefile
     - name: Extract current version
       ansible.builtin.set_fact:
-        os_release: "{{ osreleasefile['content'] | b64decode | regex_findall('^VERSION=\"(.*)\"$', multiline=True) | first }}"
+        os_release: "{{ osreleasefile['content'] | b64decode | regex_findall('^KAIROS_VERSION=\"(.*)\"$', multiline=True) | first }}"
     - name: Print os version
       ansible.builtin.debug:
         var: os_release
@@ -41,4 +41,4 @@
       when: os_release != kairos_version or config.changed
   vars:
     # renovate: depName=quay.io/kairos/kairos-ubuntu-22-lts
-    kairos_version: "v2.0.0-k3sv1.26.3+k3s1"
+    kairos_version: "v2.0.3-k3sv1.26.4+k3s1"
