--- a/plays/test-k8s-cluster.yml
+++ b/plays/test-k8s-cluster.yml
@@ -11,6 +11,11 @@
     - ansible.builtin.import_tasks: k8s/purelb/tasks.yml
       tags:
         - purelb
+    - ansible.builtin.import_tasks: k8s/cert-manager/tasks.yml
+      tags:
+        - cert-manager
+      vars:
+        certmanager_cloudflare_api_token: "{{ hostvars[groups['kairos_test'] | first].certmanager_cloudflare_api_token }}"
     - ansible.builtin.import_tasks: k8s/traefik/tasks.yml
       tags:
         - traefik
