--- a/plays/k8s/traefik/kustomization.yml
+++ b/plays/k8s/traefik/kustomization.yml
@@ -2,7 +2,16 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+images:
+  - name: traefik
+    newTag: v2.9.10
 resources:
+  - namespace.yml
   - https://raw.githubusercontent.com/traefik/traefik/v2.9.10/docs/content/reference/dynamic-configuration/kubernetes-crd-definition-v1.yml
   - https://raw.githubusercontent.com/traefik/traefik/v2.9.10/docs/content/reference/dynamic-configuration/kubernetes-crd-rbac.yml
+  - ingressclass.yml
   - serviceaccount.yml
+  - deployment.yml
+  - service.yml
+patchesStrategicMerge:
+  - set_cluster_role_binding_namespace.yml
