--- a/plays/k8s/cert-manager/kustomization.yml
+++ b/plays/k8s/cert-manager/kustomization.yml
@@ -6,5 +6,10 @@ resources:
   # renovate:
   - https://github.com/cert-manager/cert-manager/releases/download/v1.11.1/cert-manager.yaml
   - clusterissuer.yml
+patchesJson6902:
+  - path: add_dns01_recursive_nameservers.yml
+    target:
+      kind: Deployment
+      name: cert-manager
 patchesStrategicMerge:
   - increase_replicas.yml
