--- a/plays/k8s/traefik/service.yml
+++ b/plays/k8s/traefik/service.yml
@@ -17,7 +17,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: traefik-web-service
+  name: traefik-service
   namespace: traefik
 spec:
   ports:
