--- a/plays/k8s/cert-manager/clusterissuer.yml
+++ b/plays/k8s/cert-manager/clusterissuer.yml
@@ -19,3 +19,24 @@ spec:
         selector:
           dnsZones:
             - tswn.us
+---
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+metadata:
+  name: letsencrypt
+  namespace: cert-manager
+spec:
+  acme:
+    email: letsencrypt@shawnwilsher.com
+    server: https://acme-v02.api.letsencrypt.org/directory
+    privateKeySecretRef:
+      name: letsencrypt-key
+    solvers:
+      - dns01:
+          cloudflare:
+            apiTokenSecretRef:
+              name: cloudflare-api-token-secret
+              key: api-token
+        selector:
+          dnsZones:
+            - tswn.us
