--- a/plays/k8s/traefik/deployment.yml
+++ b/plays/k8s/traefik/deployment.yml
@@ -19,10 +19,12 @@ spec:
         - name: traefik
           image: traefik
           args:
-            - --api.insecure
+            - --api.dashboard=true
+            - --api.insecure=true
             - --entrypoints.web.address=:80
             - --entrypoints.websecure.address=:443
             - --providers.kubernetescrd
+            - --providers.kubernetescrd.allowCrossNamespace=true
             # TODO: remove once working
             - --log.level=DEBUG
           ports:
