--- a/plays/test-k8s-cluster.yml
+++ b/plays/test-k8s-cluster.yml
@@ -37,3 +37,4 @@
     # Right now, I only have the test cluster, but this will need to change in the future!
     cluster: default
     k3s_subdomain_prefix: test-
+    kustomization_overlay: test
