--- a/kustomization/test/traefik/kustomization.yml
+++ b/kustomization/test/traefik/kustomization.yml
@@ -4,3 +4,8 @@ kind: Kustomization
 
 bases:
   - ../../base/traefik
+patchesJson6902:
+  - path: set_debug_log_level.yml
+    target:
+      kind: Deployment
+      name: traefik-deployment
