--- a/kustomization/base/traefik/deployment.yml
+++ b/kustomization/base/traefik/deployment.yml
@@ -25,6 +25,7 @@ spec:
             - --entrypoints.websecure.address=:443
             - --providers.kubernetescrd
             - --providers.kubernetescrd.allowCrossNamespace=true
+            - --accesslog
           ports:
             - name: web
               containerPort: 80
