--- a/kustomization/test/traefik/kustomization.yml
+++ b/kustomization/test/traefik/kustomization.yml
@@ -9,3 +9,7 @@ patchesJson6902:
     target:
       kind: Deployment
       name: traefik-deployment
+  - path: change_ingressroute_host.yml
+    target:
+      kind: IngressRoute
+      name: traefik-dashboard-ingressroute
