--- a/kustomization/base/traefik/kustomization.yml
+++ b/kustomization/base/traefik/kustomization.yml
@@ -4,10 +4,13 @@ kind: Kustomization
 
 images:
   - name: traefik
+    # renovate: datasource=github-releases depName=traefik/traefik
     newTag: v2.9.10
 resources:
   - namespace.yml
+    # renovate: datasource=github-releases
   - https://raw.githubusercontent.com/traefik/traefik/v2.9.10/docs/content/reference/dynamic-configuration/kubernetes-crd-definition-v1.yml
+    # renovate: datasource=github-releases
   - https://raw.githubusercontent.com/traefik/traefik/v2.9.10/docs/content/reference/dynamic-configuration/kubernetes-crd-rbac.yml
   - ingressclass.yml
   - serviceaccount.yml
