--- a/renovate.json
+++ b/renovate.json
@@ -32,8 +32,7 @@
     },
     {
       "fileMatch": [
-        "^roles/.+/tasks/.+\\.yml$",
-        "^roles/k8s/.+/tasks\\.yml$"
+        "^roles/.+/tasks/.+\\.yml$"
       ],
       "datasourceTemplate": "docker",
       "matchStrings": [
@@ -57,6 +56,15 @@
       ],
       "matchStrings": [
         "spec:\\n +chart: (?<depName>.*?)(?:\\n +repo: (?<registryUrl>.*?))?(?:\\n +valuesContent: \\|-\\n[\\s\\S]*?)?\\n +version: \"(?<currentValue>.*?)\""
+      ]
+    },
+    {
+      "fileMatch": [
+        "^kustomization/.+/kustomization\\.yml$"
+      ],
+      "matchStrings": [
+        "#\\s*renovate:\\s(?<datasource>.*?)\\sdepName=(?<depName>.*?)\\n\\s+newTag: (?<currentValue>.*?)\\n",
+        "#\\s*renovate:\\s(?<datasource>.*?)\\n\\s+- https://raw\\.githubusercontent\\.com/(?<depName>.*?)/(?<currentValue>v[0-9]+\\.[0-9]+\\.[0-9]+)"
       ]
     }
   ]
