move RecurringJob to kustomize

--- a/kustomization/base/longhorn/kustomization.yml
+++ b/kustomization/base/longhorn/kustomization.yml
@@ -7,3 +7,4 @@ resources:
   # - https://raw.githubusercontent.com/longhorn/longhorn/v1.4.1/deploy/longhorn.yaml
   - ingressroute.yml
   - storageclass.yml
+  - recurringjob.yml
