include ingressroute.yml

--- a/kustomization/base/traefik/kustomization.yml
+++ b/kustomization/base/traefik/kustomization.yml
@@ -17,5 +17,6 @@ resources:
   - deployment.yml
   - service.yml
   - certificate.yml
+  - ingressroute.yml
 patchesStrategicMerge:
   - set_cluster_role_binding_namespace.yml
