update ingressroute name for longhorn

--- a/kustomization/base/longhorn/ingressroute.yml
+++ b/kustomization/base/longhorn/ingressroute.yml
@@ -2,7 +2,7 @@
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
-  name: longhorn-ingressroute
+  name: longhorn-frontend-ingressroute
   namespace: default
 spec:
   entryPoints:
