--- a/plays/k8s/cert-manager/tasks.yml
+++ b/plays/k8s/cert-manager/tasks.yml
@@ -1,21 +1,24 @@
 ---
-- name: Install cert-manager via Kustomize
+- name: Configure cert-manager via Kustomize
   kubernetes.core.k8s:
+    apply: yes
     context: "{{ cluster }}"
     definition: "{{ resource }}"
     state: present
-  loop: "{{ lookup('kubernetes.core.kustomize', dir='plays/k8s/cert-manager/').split('---\n') | map('from_yaml') }}"
+  loop: "{{ lookup('kubernetes.core.kustomize', dir='kustomization/' + kustomization_overlay + '/cert-manager/').split('---\n') | map('from_yaml') }}"
   loop_control:
     label: "{{ resource.apiVersion }}.{{ resource.kind }} {{ resource.metadata.name }}"
     loop_var: resource
 - name: Create Secret for the Cloudflare API Token
   kubernetes.core.k8s:
-    api_version: v1
+    apply: yes
     context: "{{ cluster }}"
-    kind: Secret
-    name: cloudflare-api-token-secret
-    namespace: cert-manager
     resource_definition:
+      apiVersion: v1
+      kind: Secret
+      metadata:
+        name: cloudflare-api-token-secret
+        namespace: cert-manager
       stringData:
         api-token: "{{ certmanager_cloudflare_api_token }}"
       type: Opaque
