--- a/renovate.json
+++ b/renovate.json
@@ -60,7 +60,7 @@
     },
     {
       "fileMatch": [
-        "^kustomization/.+/kustomization\\.yml$"
+        "^kustomization/.+/.+/kustomization\\.yml$"
       ],
       "matchStrings": [
         "#\\s*renovate:\\sdatasource=(?<datasource>.*?)\\sdepName=(?<depName>.*?)\\n\\s+newTag: (?<currentValue>.*?)\\n",
