--- a/kustomization/base/cert-manager/kustomization.yml
+++ b/kustomization/base/cert-manager/kustomization.yml
@@ -3,7 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  # renovate:
+  # renovate: datasource=github-releases
   - https://github.com/cert-manager/cert-manager/releases/download/v1.11.1/cert-manager.yaml
   - clusterissuer.yml
 patchesJson6902:
