install longhorn with kustomize, not a helm chart

--- a/kustomization/base/longhorn/kustomization.yml
+++ b/kustomization/base/longhorn/kustomization.yml
@@ -4,7 +4,8 @@ kind: Kustomization
 
 resources:
     # renovate: datasource=github-releases
-  # - https://raw.githubusercontent.com/longhorn/longhorn/v1.4.1/deploy/longhorn.yaml
+  - https://raw.githubusercontent.com/longhorn/longhorn/v1.4.1/deploy/longhorn.yaml
   - ingressroute.yml
   - storageclass.yml
   - recurringjob.yml
+  - setting.yml
