--- a/plays/k8s/longhorn/tasks.yml
+++ b/plays/k8s/longhorn/tasks.yml
@@ -1,41 +1,42 @@
 ---
 - name: Create a namespace for Longhorn
   kubernetes.core.k8s:
-    api_version: v1
+    apply: yes
     context: "{{ cluster }}"
-    kind: Namespace
-    name: longhorn-system
     state: present
+    resource_definition:
+      api_version: v1
+      kind: Namespace
+      metadata:
+        name: longhorn-system
 - name: Create Secret for the bucket target
   kubernetes.core.k8s:
-    api_version: v1
     context: "{{ cluster }}"
-    kind: Secret
-    name: backup-target-credentials
-    namespace: longhorn-system
     resource_definition:
+      api_version: v1
+      kind: Secret
+      metadata:
+        name: backup-target-credentials
+        namespace: longhorn-system
       stringData:
         AWS_ACCESS_KEY_ID: "{{ longhorn_s3.access_key }}"
         AWS_SECRET_ACCESS_KEY: "{{ longhorn_s3.secret_key }}"
         AWS_ENDPOINTS: http://minio-svc.default.svc.cluster.local:9000
       type: Opaque
     state: present
-- name: Install Longhorn via Helm
+- name: Configure global encryption key
   kubernetes.core.k8s:
-    api_version: helm.cattle.io/v1
+    apply: yes
     context: "{{ cluster }}"
-    kind: HelmChart
     resource_definition:
+      apiVersion: v1
+      kind: Secret
       metadata:
-        name: longhorn
+        name: longhorn-default-crypto
         namespace: longhorn-system
-      spec:
-        chart: longhorn
-        repo: https://charts.longhorn.io
-        valuesContent: |-
-          {{ longhorn_values }}
-        version: "1.4.1"
-    state: present
+      stringData:
+        CRYPTO_KEY_VALUE: "{{ longhorn_default_crypto_passphrase }}"
+        CRYPTO_KEY_PROVIDER: secret
 - name: Setup Longhorn via Kustomize
   kubernetes.core.k8s:
     apply: yes
@@ -46,15 +47,3 @@
   loop_control:
     label: "{{ resource.apiVersion }}.{{ resource.kind }} {{ resource.metadata.name }}"
     loop_var: resource
-- name: Configure global encryption key
-  kubernetes.core.k8s:
-    api_version: v1
-    context: "{{ cluster }}"
-    kind: Secret
-    resource_definition:
-      metadata:
-        name: longhorn-default-crypto
-        namespace: longhorn-system
-      stringData:
-        CRYPTO_KEY_VALUE: "{{ longhorn_default_crypto_passphrase }}"
-        CRYPTO_KEY_PROVIDER: secret
