--- a/kustomization/base/traefik/kustomization.yml
+++ b/kustomization/base/traefik/kustomization.yml
@@ -18,6 +18,7 @@ resources:
   - service.yml
   - certificate.yml
   - serverstransport.yml
+  - middleware.yml
   - ingressroute.yml
 patchesStrategicMerge:
   - set_cluster_role_binding_namespace.yml
