--- a/plays/test-k8s-cluster.yml
+++ b/plays/test-k8s-cluster.yml
@@ -37,7 +37,16 @@
     - ansible.builtin.import_tasks: k8s/rabbitmq-operator/tasks.yml
       tags:
         - rabbitmq
-    - ansible.builtin.import_tasks: k8s/unifi/tasks.yml
+    - name: Setup unifi via Kustomize
+      kubernetes.core.k8s:
+        apply: yes
+        context: "{{ cluster }}"
+        definition: "{{ resource }}"
+        state: present
+      loop: "{{ lookup('kubernetes.core.kustomize', dir='kustomization/test/unifi/').split('---\n') | map('from_yaml') }}"
+      loop_control:
+        label: "{{ resource.apiVersion }}.{{ resource.kind }} {{ resource.metadata.name }}"
+        loop_var: resource
       tags:
         - unifi
   vars:
