Use a file provider to avoid all ingress routes being in the default namespace
Taken from https://community.traefik.io/t/can-i-set-namespace-for-tls-secretname-in-ingressroute/2619/4

This allows the use of a wildcard certificate still, but without the
need to put the secrets and ingress routess in the default namespace.

--- a/kustomization/base/traefik/certificate.yml
+++ b/kustomization/base/traefik/certificate.yml
@@ -3,7 +3,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: wildcard-tswn-us-certificate
-  namespace: default
+  namespace: traefik
 spec:
   secretName: wildcard-tswn-us-secret
   issuerRef:
@@ -15,7 +15,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: wildcard-hogs-tswn-us-certificate
-  namespace: default
+  namespace: traefik
 spec:
   secretName: wildcard-hogs-tswn-us-secret
   issuerRef:
