--- a/kustomization/base/longhorn/ingressroute.yml
+++ b/kustomization/base/longhorn/ingressroute.yml
@@ -3,7 +3,7 @@ apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: longhorn-frontend-ingressroute
-  namespace: default
+  namespace: longhorn-system
 spec:
   entryPoints:
     - websecure
@@ -14,8 +14,7 @@ spec:
           name: longhorn-frontend
           namespace: longhorn-system
           port: 80
-  tls:
-    secretName: wildcard-hogs-tswn-us-secret
+  tls: {}
 ---
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
