--- a/kustomization/base/traefik/ingressroute.yml
+++ b/kustomization/base/traefik/ingressroute.yml
@@ -3,7 +3,7 @@ apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: traefik-dashboard-ingressroute
-  namespace: default
+  namespace: traefik
 spec:
   entryPoints:
     - websecure
@@ -14,8 +14,7 @@ spec:
           name: traefik-dashboard-service
           namespace: traefik
           port: 8080
-  tls:
-    secretName: wildcard-hogs-tswn-us-secret
+  tls: {}
 ---
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
