--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -198,11 +198,11 @@ bind_zones:
         ip: "10.10.0.85"
       - name: "work02.routers.hogs"
         ip: "10.10.0.86"
-      - name: test-controlplane01.hogs
-        ip: 10.10.0.101
       - name: test-node01.hogs
-        ip: 10.10.0.102
+        ip: 10.10.0.101
       - name: test-node02.hogs
+        ip: 10.10.0.102
+      - name: test-node03.hogs
         ip: 10.10.0.103
       - name: test-worker01.hogs
         ip: 10.10.0.104
