--- a/host_vars/test-node01.hogs.tswn.us.yml
+++ b/host_vars/test-node01.hogs.tswn.us.yml
@@ -1,7 +1,9 @@
 ---
 common__gateway_v4_address: 10.10.0.1
 common__ip_addresses:
-  - 10.10.0.102/24
+  - 10.10.0.101/24
 common__nameservers:
   addresses:
     - 10.10.0.1
+
+k3s_cluster_init: yes
