--- a/plays/k8s/cert-manager/tasks.yml
+++ b/plays/k8s/cert-manager/tasks.yml
@@ -1,14 +1,13 @@
 ---
-- name: Configure cert-manager via Kustomize
+- name: Create a namespace for cert-manager objects
   kubernetes.core.k8s:
-    apply: yes
     context: "{{ cluster }}"
-    definition: "{{ resource }}"
     state: present
-  loop: "{{ lookup('kubernetes.core.kustomize', dir='kustomization/' + kustomization_overlay + '/cert-manager/').split('---\n') | map('from_yaml') }}"
-  loop_control:
-    label: "{{ resource.apiVersion }}.{{ resource.kind }} {{ resource.metadata.name }}"
-    loop_var: resource
+    resource_definition:
+      apiVersion: v1
+      kind: Namespace
+      metadata:
+        name: cert-manager
 - name: Create Secret for the Cloudflare API Token
   kubernetes.core.k8s:
     apply: yes
