--- a/kustomization/test/argo-proj/kustomization.yml
+++ b/kustomization/test/argo-proj/kustomization.yml
@@ -5,5 +5,6 @@ kind: Kustomization
 bases:
   - ../../base/argo-proj
 resources:
+  - application/argo-proj.yml
   - application/purelb.yml
   - application/traefik.yml
