deploy longhorn via argocd

--- a/kustomization/test/argo-proj/kustomization.yml
+++ b/kustomization/test/argo-proj/kustomization.yml
@@ -6,5 +6,6 @@ bases:
   - ../../base/argo-proj
 resources:
   - application/argo-proj.yml
+  - application/longhorn.yml
   - application/purelb.yml
   - application/traefik.yml
