--- a/kustomization/test/argo-proj/kustomization.yml
+++ b/kustomization/test/argo-proj/kustomization.yml
@@ -9,3 +9,5 @@ resources:
   - application/longhorn.yml
   - application/purelb.yml
   - application/traefik.yml
+patchesStrategicMerge:
+  - application/patchesStrategicMerge/argo-cd.yml
